fixing layout on small media query

--- a/css/layout_hucf_grid.css
+++ b/css/layout_hucf_grid.css
@@ -73,7 +73,8 @@ footer {
 }
 
 @media screen and (max-width: 600px) {
+	
 	.row {
-		grid-template: '.';
+		grid-template-areas: 'left' 'middle' 'right';
 	}
 }
